<resources>
    <string name="app_name">2chance</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone_num">Phone Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to Second Chance!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Log In</string>
    <string name="register_text">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="your_email">Your Email</string>
    <string name="your_pwd">Your Password</string>
    <string name="your_phone_num">Your Phone Number</string>
    <string name="create_your_username">Create Your Username</string>
    <string name="or_signin">or register in using</string>
    <string name="already">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_login">or login in using</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_pwd_1">Please enter your registered email ID.</string>
    <string name="forgot_pwd_2">We will send a verification code to your registered email ID.</string>
    <string name="next">NEXT</string>
    <string name="forgot_pwd3">Please enter a new password.</string>
    <string name="prompt_pwd">Enter Password</string>
    <string name="prompt_reenter">Re-enter Password</string>
    <string name="promt_current">Current Password</string>
    <string name="prompt_new_pwd">New Password</string>
    <string name="prompt_confirm_pwd">Confirm New Password</string>
    <string name="reset_pwd">Please reset a new password.</string>
    <string name="verification_code">Please enter your verfication code</string>
    <string name="verification_code1">We have send you a  verification code to your registered email ID.</string>
    <string name="done">DONE</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter a phone number</string>
    <string name="error_invalid_phone">Please enter a valid phone number</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
</resources>
