<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/initial_image"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:background="@drawable/initial"
        android:contentDescription="@string/welcome"
        tools:ignore="MissingConstraints"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/gray"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/welcome"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:layout_margin="10dp"
            android:textColor="#ffffff"
            android:text="@string/login_text"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/roundedbutton"
            android:text="@string/register_text"></Button>
    </LinearLayout>

</LinearLayout>